# mem0-local-platform

./: .env.example  .gitignore  .mem0-sync.default.yml  .mem0-sync.yml  .mise.toml  AGENTS.md  Dockerfile  LICENSE  README.jp.md  README.md  compose.mem0-config.yml  compose.resources.yml  compose.tailscale.yml  compose.yml  install.sh  mem0.config.example.json  mem0.config.example.yml  mem0.env.example  mem0.policy.example.yml  mem0.sanitizer.example.yml  pyproject.toml
.codex/: AGENTS.ja.md  AGENTS.md
.github/workflows/: reusable-sync.yml  sync-memory.yml
docs/architecture/: mcp-boundaries.jp.md  mcp-boundaries.md  memory-model.jp.md  memory-model.md  model-provider-settings.jp.md  model-provider-settings.md
docs/conventions/: adopting-repository.jp.md  adopting-repository.md  local-tool-ingestion.jp.md  local-tool-ingestion.md  mcp-setup.jp.md  mcp-setup.md  repository-indexing.jp.md  repository-indexing.md
docs/operations/: backup.jp.md  backup.md  resource-sizing.jp.md  resource-sizing.md
docs/security/: cloudflare-access.jp.md  cloudflare-access.md  policy-format.jp.md  policy-format.md  tailscale-access.jp.md  tailscale-access.md  tenant-boundaries.jp.md  tenant-boundaries.md  tenant-operations.jp.md  tenant-operations.md
mcp/: server.py
mem0_local_platform_api/: __init__.py  sanitizer.py  server.py
mem0_local_platform_mcp/: __init__.py  mem0_client.py  server.py  tenant_policy.py
scripts/: __init__.py  chunk_markdown.py  cleanup_text.py  ingest_repo.py  remember_text.py  run_mcp.sh  sync_local_repo.py  sync_path_rules.py
tests/: test_indexing.py
(+7 files in other folders)
