[project]
name = "mem0-local-platform"
version = "0.1.0"
description = "Local-first developer knowledge infrastructure built on mem0, FalkorDB, Qdrant, MCP, and GitHub sync."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "mem0ai>=0.1.100",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]

[project.scripts]
ingest-to-mem0 = "scripts.ingest_repo:main"
remember-to-mem0 = "scripts.remember_text:main"
mem0-local-mcp = "mem0_local_platform_mcp.server:main"
mem0-local-api = "mem0_local_platform_api.server:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "mem0_local_platform_api", "mem0_local_platform_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
